--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
 	<meta charset="utf-8">
 	<title>Dice Roll v0.1</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/styles.css"> 
+	<link rel="stylesheet" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<h1>Welcome to Dice Roll!</h1>
-		<p>Just add how many dices you want, how many sides are on them, and roll!</p>
-		<p>Feel free to download this page and use it offline from your favourite web browser.</p>
-	</header>
+	<div class="container">
+		<header>
+			<h1>Welcome to Dice Roll!</h1>
+			<p>Just add how many dices you want, how many sides are on them, and roll!</p>
+			<p>Feel free to download this page and use it offline from your favourite web browser.</p>
+		</header>
 
-	<main>
-		<form>
-			<label class="sr-only" for="inpDice">Number of dices</label>
-			<input type="number" id="inpDice" name="inpDice" placeholder="How many dices?">
-			<label class="sr-only" for="inpSide">Number of sides</label>
-			<input type="number" id="inpSide" name="inpSide" placeholder="How many sides?">
-			<button type="button" id="btnRoll">Roll!</button>
-		</form>
-	</main>
+		<main>
+			<form>
+				<label class="sr-only" for="inpDice">Number of dices</label>
+				<input type="number" class="input-number" id="inpDice" name="inpDice" placeholder="How many dices?">
 
+				<label class="sr-only" for="inpSide">Number of sides</label>
+				<input type="number" class="input-number" id="inpSide" name="inpSide" placeholder="How many sides?">
+
+				<button type="button" class="button" id="btnRoll">Roll!</button>
+			</form>
+		</main>
+	</div>
+
+	<footer>
+
+	</footer>
+
+	<div class="loader" id="loader"></div>
+
+	<script src="js/jquery-3.5.0.min.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
