--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="wrapper">
-		<header class="header-content">
-			<h1 class="center">Welcome to Dice Roll!</h1>
-			<p class="center">Just add how many dices you want, how many sides are on them, and roll!</p>
+	<div class="container">
+		<header>
+			<h1>Welcome to Dice Roll!</h1>
+			<p>Just add how many dices you want, how many sides are on them, and roll!</p>
 		</header>
 
 		<main>
-			<form>
-				<div class="main-content">
+			<div class="wrapper">
+				<div class="col">
 					<label class="sr-only" for="inpDice">Number of dices</label>
 					<input type="number" class="input" id="inpDice" name="inpDice" placeholder="How many dices?">	
 				</div>
 
-				<div class="main-content">
+				<div class="col">
 					<label class="sr-only" for="inpSide">Number of sides</label>
 					<select name="inpSide" id="inpSide" class="input">
 						<option value="4">4 sides</option>
@@ -33,11 +33,12 @@
 					</select>
 				</div>
 
-				<div class="main-content center">
+				<div class="col">
 					<button type="button" class="button" id="btnRoll">Roll!</button>
 				</div>
-			</form>
+			</div>
 		</main>
+	
 
 		<footer class="footer-content center">
 			<p>Feel free to visit the GitHub repository to download the latest version.</p>
