Added modal window for roll results

--- a/index.html
+++ b/index.html
@@ -34,15 +34,31 @@
 				</div>
 
 				<div class="col">
-					<button type="button" class="button" id="btnRoll">Roll!</button>
+					<button type="button" class="btn btn-roll" id="btnRoll">Roll!</button>
 				</div>
 			</div>
 		</main>
-	
 
 		<footer class="footer-content center">
 			<p>Feel free to visit the GitHub repository to download the latest version.</p>
 		</footer>
+	</div>
+
+	<!-- MODAL WINDOW -->
+	<div class="modal-container" id="modal">
+		<div class="modal-wrapper">
+			<div id="roll-container">
+				<p>Your roll will go here!</p>
+			</div>
+			<div class="modal-flex">
+				<div class="modal-col">
+					<button type="button" class="btn btn-roll" id="btnReroll">Reroll!</button>
+				</div>
+				<div class="modal-col">
+					<button type="button" class="btn btn-cancel" id="btnClose">Close</button>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<div class="loader" id="loader"></div>
