Added roll algorithm and styling for roll result on modal window

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<div class="wrapper">
 				<div class="col">
 					<label class="sr-only" for="inpDice">Number of dices</label>
-					<input type="number" class="input" id="inpDice" name="inpDice" placeholder="How many dices?">	
+					<input type="number" class="input" id="inpDice" name="inpDice" max="20" placeholder="Max of 20 dices...">	
 				</div>
 
 				<div class="col">
-					<label class="sr-only" for="inpSide">Number of sides</label>
-					<select name="inpSide" id="inpSide" class="input">
-						<option value="4">4 sides</option>
+					<label class="sr-only" for="inpType">Number of sides</label>
+					<select name="inpType" id="inpType" class="input">
+						<option value="4" selected>4 sides</option>
 						<option value="6">6 sides</option>
 						<option value="8">8 sides</option>
 						<option value="10">10 sides</option>
@@ -47,7 +47,7 @@
 	<!-- MODAL WINDOW -->
 	<div class="modal-container" id="modal">
 		<div class="modal-wrapper">
-			<div id="roll-container">
+			<div class="modal-flex" id="roll-container">
 				<p>Your roll will go here!</p>
 			</div>
 			<div class="modal-flex">
@@ -61,9 +61,6 @@
 		</div>
 	</div>
 
-	<div class="loader" id="loader"></div>
-
-	<script src="js/jquery-3.5.0.min.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
