--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</main>
 
 		<footer class="footer-content center">
-			<p>Feel free to visit the GitHub repository to download the latest version.</p>
+			<p>Feel free to visit the <a href="https://github.com/HiImHuesitos/dice-roll/">GitHub repository</a> to download the latest version.</p>
 		</footer>
 	</div>
 
